cmake_minimum_required(VERSION 3.20)
project(AaDS_sheet)

set(CMAKE_CXX_STANDARD 11)

add_executable(AaDS_sheet
        stack.cpp rk1.cpp rk2.cpp hw/1.cpp hw/2.cpp queue.cpp hw/3.cpp hw/4.cpp heap.cpp hw/5.cpp sem4-hash.cpp hw2/1.cpp 2_rk.cpp hw2/4.cpp hw2/2.cpp hw3/2.cpp hw3/3.cpp hw3/5.cpp AVLtree.cpp spring/1/1.cpp spring/rk1/rk1.cpp spring/1/2.cpp spring/1/3.cpp deque.cpp spring/1/4.cpp spring/1/5.cpp spring/1/6.cpp spring/1/7.cpp)
